--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "com.example.kalkvad_2_1"
         minSdk 28
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "2.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -26,6 +26,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+
 }
 
 dependencies {
@@ -33,19 +35,37 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
 
     implementation 'com.google.android.gms:play-services-ads:23.0.0'
 
-    implementation 'com.google.android.gms:play-services-ads:18.0.1'
 
-    implementation 'com.my.target:mytarget-sdk:5.20.0'
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+
+    implementation 'com.my.target:mytarget-sdk:5.20.1'
+
+
+    implementation 'com.google.android.exoplayer:exoplayer-core:2.19.1'
+
+    implementation 'com.google.android.exoplayer:exoplayer-hls:2.19.1'
+
+
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+
+
+    implementation 'com.yandex.android:mobileads:6.4.1'
+    implementation 'com.yandex.ads.mediation:mobileads-mytarget:5.20.0.0'
+
+    implementation 'com.my.tracker:mytracker-sdk:3.2.0'
 
 
 
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+
 
 
 
