--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,15 +17,21 @@
         tools:targetApi="31"
         android:hardwareAccelerated="true">
 
-
-
-
-
-
         <meta-data
 
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-3940256099942544~6300978111"/>
+            android:value="ca-app-pub-3940256099942544~6300978111"
+            />
+
+        <meta-data
+            android:name="com.my.target.ads.MyTargetView"
+            android:value="true"
+            />
+
+        <meta-data
+            android:name="@string/yandex_mobileads_age_restricted_user"
+            android:value="true" />
+
 
 
         <activity android:name="com.my.target.common.MyTargetActivity"
